remove columns in comuna data

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,28 +19,216 @@
     "df_sex = pd.read_csv(\"3_clean_datasets/sex_id.csv\")\n",
     "df_studies = pd.read_csv(\"3_clean_datasets/studies_id.csv\")\n",
     "df_visa_type = pd.read_csv(\"3_clean_datasets/visa_type.csv\")\n",
-    "\n",
+    "df_comunas = pd.read_csv(\"3_clean_datasets/comunas_data.csv\")\n",
     "df_visas = pd.read_csv(\"3_clean_datasets/visas.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1494873, 17)"
+       "(348, 6)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_visas.shape"
+    "df_visas.shape\n",
+    "df_comunas.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region_id</th>\n",
+       "      <th>region_name</th>\n",
+       "      <th>comuna_datachile_id</th>\n",
+       "      <th>comuna_customs_id</th>\n",
+       "      <th>comuna_tax_office_id</th>\n",
+       "      <th>comuna_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tarapacá</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1401.0</td>\n",
+       "      <td>1204.0</td>\n",
+       "      <td>Pozo Almonte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tarapacá</td>\n",
+       "      <td>217</td>\n",
+       "      <td>1405.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>Pica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tarapacá</td>\n",
+       "      <td>113</td>\n",
+       "      <td>1101.0</td>\n",
+       "      <td>1201.0</td>\n",
+       "      <td>Iquique</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tarapacá</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1404.0</td>\n",
+       "      <td>1206.0</td>\n",
+       "      <td>Huara</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tarapacá</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1403.0</td>\n",
+       "      <td>1210.0</td>\n",
+       "      <td>Colchane</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   region_id region_name  comuna_datachile_id  comuna_customs_id  \\\n",
+       "0          1    Tarapacá                  226             1401.0   \n",
+       "1          1    Tarapacá                  217             1405.0   \n",
+       "2          1    Tarapacá                  113             1101.0   \n",
+       "3          1    Tarapacá                  108             1404.0   \n",
+       "4          1    Tarapacá                   58             1403.0   \n",
+       "\n",
+       "   comuna_tax_office_id   comuna_name  \n",
+       "0                1204.0  Pozo Almonte  \n",
+       "1                1203.0          Pica  \n",
+       "2                1201.0       Iquique  \n",
+       "3                1206.0         Huara  \n",
+       "4                1210.0      Colchane  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_comunas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comuna_datachile_id</th>\n",
+       "      <th>comuna_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>226</td>\n",
+       "      <td>Pozo Almonte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>217</td>\n",
+       "      <td>Pica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>113</td>\n",
+       "      <td>Iquique</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>108</td>\n",
+       "      <td>Huara</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>58</td>\n",
+       "      <td>Colchane</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   comuna_datachile_id   comuna_name\n",
+       "0                  226  Pozo Almonte\n",
+       "1                  217          Pica\n",
+       "2                  113       Iquique\n",
+       "3                  108         Huara\n",
+       "4                   58      Colchane"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_comunas.head()"
    ]
   },
   {
@@ -242,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
