--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +34,19 @@
        "(348, 6)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_visas.shape\n",
-    "df_comunas.shape"
+    "df_comunas.shape\n",
+    "\n",
+    "#df_comunas.pop(\"region_id\")\n",
+    "#df_comunas.pop(\"region_name\")\n",
+    "#df_comunas.pop(\"comuna_customs_id\")\n",
+    "#df_comunas.pop(\"comuna_tax_office_id\")\n"
    ]
   },
   {
