--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,22 +19,23 @@
     "df_sex = pd.read_csv(\"3_clean_datasets/sex_id.csv\")\n",
     "df_studies = pd.read_csv(\"3_clean_datasets/studies_id.csv\")\n",
     "df_visa_type = pd.read_csv(\"3_clean_datasets/visa_type.csv\")\n",
-    "df_comunas = pd.read_csv(\"3_clean_datasets/comunas_data.csv\")\n",
-    "df_visas = pd.read_csv(\"3_clean_datasets/visas.csv\")"
+    "df_comunas = pd.read_csv(\"3_clean_datasets/comunas_data.csv\", encoding='latin-1', sep=\";\")\n",
+    "df_visas = pd.read_csv(\"3_clean_datasets/visas.csv\")\n",
+    "df_comunas_coord = pd.read_csv(\"3_clean_datasets/comunas_coord.csv\", decimal=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(348, 6)"
+       "(348, 2)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,116 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>region_id</th>\n",
-       "      <th>region_name</th>\n",
-       "      <th>comuna_datachile_id</th>\n",
-       "      <th>comuna_customs_id</th>\n",
-       "      <th>comuna_tax_office_id</th>\n",
-       "      <th>comuna_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tarapacá</td>\n",
-       "      <td>226</td>\n",
-       "      <td>1401.0</td>\n",
-       "      <td>1204.0</td>\n",
-       "      <td>Pozo Almonte</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tarapacá</td>\n",
-       "      <td>217</td>\n",
-       "      <td>1405.0</td>\n",
-       "      <td>1203.0</td>\n",
-       "      <td>Pica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tarapacá</td>\n",
-       "      <td>113</td>\n",
-       "      <td>1101.0</td>\n",
-       "      <td>1201.0</td>\n",
-       "      <td>Iquique</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tarapacá</td>\n",
-       "      <td>108</td>\n",
-       "      <td>1404.0</td>\n",
-       "      <td>1206.0</td>\n",
-       "      <td>Huara</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tarapacá</td>\n",
-       "      <td>58</td>\n",
-       "      <td>1403.0</td>\n",
-       "      <td>1210.0</td>\n",
-       "      <td>Colchane</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   region_id region_name  comuna_datachile_id  comuna_customs_id  \\\n",
-       "0          1    Tarapacá                  226             1401.0   \n",
-       "1          1    Tarapacá                  217             1405.0   \n",
-       "2          1    Tarapacá                  113             1101.0   \n",
-       "3          1    Tarapacá                  108             1404.0   \n",
-       "4          1    Tarapacá                   58             1403.0   \n",
-       "\n",
-       "   comuna_tax_office_id   comuna_name  \n",
-       "0                1204.0  Pozo Almonte  \n",
-       "1                1203.0          Pica  \n",
-       "2                1201.0       Iquique  \n",
-       "3                1206.0         Huara  \n",
-       "4                1210.0      Colchane  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_comunas.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +119,7 @@
        "4                   58      Colchane"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,166 +161,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>sex_id</th>\n",
-       "      <th>birth_date</th>\n",
-       "      <th>age</th>\n",
-       "      <th>activity_id</th>\n",
-       "      <th>studies_id</th>\n",
-       "      <th>comuna_datachile_id</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>comuna_id</th>\n",
        "      <th>region_id</th>\n",
-       "      <th>country_name</th>\n",
-       "      <th>es_country_name</th>\n",
-       "      <th>country_code</th>\n",
-       "      <th>iso3</th>\n",
-       "      <th>region</th>\n",
-       "      <th>region_code</th>\n",
-       "      <th>sub_region</th>\n",
-       "      <th>sub_region_code</th>\n",
-       "      <th>visa_type_id</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>latitud</th>\n",
+       "      <th>longitud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1984-01-17</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>290</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Peru</td>\n",
-       "      <td>Perú</td>\n",
-       "      <td>219</td>\n",
-       "      <td>PER</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>19</td>\n",
-       "      <td>South America</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Arica</td>\n",
+       "      <td>-18.4707</td>\n",
+       "      <td>-70.2945</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2005</td>\n",
        "      <td>1</td>\n",
-       "      <td>1970-07-11</td>\n",
-       "      <td>35</td>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>228</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Bolivia</td>\n",
-       "      <td>Bolivia</td>\n",
-       "      <td>221</td>\n",
-       "      <td>BOL</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>19</td>\n",
-       "      <td>South America</td>\n",
-       "      <td>5</td>\n",
        "      <td>1</td>\n",
+       "      <td>Camarones</td>\n",
+       "      <td>-18.9191</td>\n",
+       "      <td>-69.4532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2005</td>\n",
        "      <td>2</td>\n",
-       "      <td>1983-01-18</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>228</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>218</td>\n",
-       "      <td>ECU</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>19</td>\n",
-       "      <td>South America</td>\n",
-       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>General Lagos</td>\n",
+       "      <td>-17.7863</td>\n",
+       "      <td>-69.5452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1984-03-15</td>\n",
-       "      <td>21</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>134</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Morocco</td>\n",
-       "      <td>Marruecos</td>\n",
-       "      <td>128</td>\n",
-       "      <td>MAR</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Northern Africa</td>\n",
-       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>Putre</td>\n",
+       "      <td>-18.2052</td>\n",
+       "      <td>-69.4946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1975-08-07</td>\n",
-       "      <td>30</td>\n",
+       "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>314</td>\n",
-       "      <td>9</td>\n",
-       "      <td>China</td>\n",
-       "      <td>China</td>\n",
-       "      <td>336</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>142</td>\n",
-       "      <td>Eastern Asia</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Alto Hospicio</td>\n",
+       "      <td>-20.2418</td>\n",
+       "      <td>-70.0762</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year  sex_id  birth_date  age  activity_id  studies_id  \\\n",
-       "0  2005       1  1984-01-17   21            2           0   \n",
-       "1  2005       1  1970-07-11   35            2           5   \n",
-       "2  2005       2  1983-01-18   22            2           0   \n",
-       "3  2005       2  1984-03-15   21            5           0   \n",
-       "4  2005       1  1975-08-07   30            5           0   \n",
-       "\n",
-       "   comuna_datachile_id  region_id country_name es_country_name  country_code  \\\n",
-       "0                  290         13         Peru            Perú           219   \n",
-       "1                  228         13      Bolivia         Bolivia           221   \n",
-       "2                  228         13      Ecuador         Ecuador           218   \n",
-       "3                  134         13      Morocco       Marruecos           128   \n",
-       "4                  314          9        China           China           336   \n",
-       "\n",
-       "  iso3    region  region_code       sub_region  sub_region_code  visa_type_id  \n",
-       "0  PER  Americas           19    South America                5             1  \n",
-       "1  BOL  Americas           19    South America                5             1  \n",
-       "2  ECU  Americas           19    South America                5             1  \n",
-       "3  MAR    Africa            2  Northern Africa               15             1  \n",
-       "4  CHN      Asia          142     Eastern Asia               30             1  "
+       "   Unnamed: 0  comuna_id  region_id         nombre  latitud  longitud\n",
+       "0           0          1          1          Arica -18.4707  -70.2945\n",
+       "1           1          2          1      Camarones -18.9191  -69.4532\n",
+       "2           2          3          1  General Lagos -17.7863  -69.5452\n",
+       "3           3          4          1          Putre -18.2052  -69.4946\n",
+       "4           4          5          2  Alto Hospicio -20.2418  -70.0762"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_visas.head()"
+    "\n",
+    "df_comunas_coord.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d1cba19b971ff694059e83efcf642bf4bc6078f5ed50d16de55abdc3eb9fc494"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
